[image_analysis,shenker/image_analysis] WIP pipeline. Add scale kwarg to power_law_composite. By default, normalize image to unit interval.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/240527 Pipeline.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/240527 Pipeline.ipynb
@@ -309,7 +309,7 @@
     "# def preprocess_func(img, k1=None, center=None, dark=None, flat=None):\n",
     "def preprocess_func(img):\n",
     "    print(\"PREPROCESSING\")\n",
-    "    return img[300 : img.shape[0] - 300, 300 : img.shape[1] - 300]"
+    "    return img[600 : img.shape[0] - 600, 1500 : img.shape[1] - 1500]"
    ]
   },
   {
@@ -374,7 +374,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "imgs = p.rois.delayed[(8, 0)].args"
+    "p.rois[(8, 0)]"
    ]
   },
   {
@@ -384,7 +384,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p.rois[(8, 0)]"
+    "imgs = p.rois.delayed[(8, 0)].args"
    ]
   },
   {
@@ -394,7 +394,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p.processed_frames.keys()"
+    "img_c = image.power_law_composite(*imgs)"
    ]
   },
   {
@@ -404,7 +404,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display_image(p.processed_frames[(8, \"RFP-EM\", 0)], scale=True, downsample=2)"
+    "display_image(img_c, scale=True, downsample=4)"
    ]
   },
   {
@@ -414,137 +414,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p.rois[(8, 0)].result()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "29",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p.rois[next(iter(p.rois.keys()))]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "30",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p.rois.values()  # [(8,0)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "31",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "imgs = [\n",
-    "    x.result() if hasattr(x, \"result\") else x\n",
-    "    for x in next(iter(p._queue._items.values())).args[0]\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "32",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "imgs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "33",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "imgs2 = [img[:600, :1600] for img in imgs]\n",
-    "img_c = image.power_law_composite(imgs2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "34",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p.raw_frames.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "35",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p.processed_frames.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "36",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p.rois.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p.rois[(8, 0)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "38",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img_c = image.power_law_composite(*imgs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display_image(img_c, scale=True, downsample=4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "40",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "%%time\n",
     "diag = util.tree()\n",
     "# diag = None\n",
     "# img = p.rois[(8, 'RFP-EM', 0)]\n",
     "# img = imgs[0]\n",
     "trenches, info = trench_detection.find_trenches(\n",
-    "    img_c,\n",
+    "    img_c,  # [300:-300,900:-900],\n",
     "    # angle=np.deg2rad(0.001),\n",
     "    join_info=False,\n",
     "    # width=12,\n",
@@ -559,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49",
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51",
+   "id": "39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52",
+   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53",
+   "id": "41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54",
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55",
+   "id": "43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56",
+   "id": "44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57",
+   "id": "45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58",
+   "id": "46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
+   "id": "47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +649,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60",
+   "id": "48",
    "metadata": {},
    "source": [
     "# Analysis"
@@ -782,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61",
+   "id": "49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62",
+   "id": "50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,7 +699,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63",
+   "id": "51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,7 +709,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64",
+   "id": "52",
    "metadata": {},
    "source": [
     "# Manual FISH trench crops"
@@ -842,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65",
+   "id": "53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66",
+   "id": "54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67",
+   "id": "55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68",
+   "id": "56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -916,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69",
+   "id": "57",
    "metadata": {
     "tags": []
    },
@@ -931,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70",
+   "id": "58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71",
+   "id": "59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -975,7 +851,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72",
+   "id": "60",
    "metadata": {
     "tags": []
    },
@@ -987,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73",
+   "id": "61",
    "metadata": {
     "tags": []
    },
@@ -999,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74",
+   "id": "62",
    "metadata": {
     "tags": []
    },
@@ -1011,7 +887,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75",
+   "id": "63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1021,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76",
+   "id": "64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,7 +910,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77",
+   "id": "65",
    "metadata": {},
    "source": [
     "# Segmentation"
@@ -1043,7 +919,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78",
+   "id": "66",
    "metadata": {
     "tags": []
    },
@@ -1056,7 +932,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79",
+   "id": "67",
    "metadata": {
     "tags": []
    },
@@ -1081,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80",
+   "id": "68",
    "metadata": {
     "tags": []
    },
@@ -1096,7 +972,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81",
+   "id": "69",
    "metadata": {
     "tags": []
    },
@@ -1108,7 +984,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82",
+   "id": "70",
    "metadata": {
     "tags": []
    },
@@ -1120,7 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83",
+   "id": "71",
    "metadata": {
     "tags": []
    },
@@ -1132,7 +1008,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84",
+   "id": "72",
    "metadata": {
     "tags": []
    },
@@ -1153,7 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85",
+   "id": "73",
    "metadata": {
     "tags": []
    },
@@ -1165,7 +1041,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86",
+   "id": "74",
    "metadata": {
     "tags": []
    },
@@ -1177,7 +1053,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87",
+   "id": "75",
    "metadata": {
     "tags": []
    },
@@ -1189,7 +1065,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88",
+   "id": "76",
    "metadata": {
     "tags": []
    },
@@ -1203,7 +1079,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89",
+   "id": "77",
    "metadata": {
     "tags": []
    },
@@ -1215,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90",
+   "id": "78",
    "metadata": {
     "tags": []
    },
@@ -1227,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91",
+   "id": "79",
    "metadata": {
     "tags": []
    },
@@ -1239,7 +1115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92",
+   "id": "80",
    "metadata": {
     "tags": []
    },
@@ -1252,7 +1128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93",
+   "id": "81",
    "metadata": {
     "tags": []
    },
@@ -1264,7 +1140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94",
+   "id": "82",
    "metadata": {
     "tags": []
    },
@@ -1276,7 +1152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95",
+   "id": "83",
    "metadata": {
     "tags": []
    },
@@ -1288,7 +1164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96",
+   "id": "84",
    "metadata": {
     "tags": []
    },
@@ -1300,7 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97",
+   "id": "85",
    "metadata": {
     "tags": []
    },
@@ -1312,7 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98",
+   "id": "86",
    "metadata": {
     "tags": []
    },
@@ -1324,7 +1200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99",
+   "id": "87",
    "metadata": {
     "tags": []
    },
@@ -1344,7 +1220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "100",
+   "id": "88",
    "metadata": {
     "tags": []
    },
@@ -1365,7 +1241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "101",
+   "id": "89",
    "metadata": {
     "tags": []
    },
@@ -1377,7 +1253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "102",
+   "id": "90",
    "metadata": {
     "tags": []
    },
@@ -1399,7 +1275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "103",
+   "id": "91",
    "metadata": {
     "tags": []
    },
@@ -1411,7 +1287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "104",
+   "id": "92",
    "metadata": {
     "tags": []
    },
@@ -1437,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "105",
+   "id": "93",
    "metadata": {
     "tags": []
    },
@@ -1449,7 +1325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "106",
+   "id": "94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1459,7 +1335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "107",
+   "id": "95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1477,7 +1353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "108",
+   "id": "96",
    "metadata": {
     "tags": []
    },
@@ -1501,7 +1377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "109",
+   "id": "97",
    "metadata": {
     "tags": []
    },
@@ -1524,7 +1400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "110",
+   "id": "98",
    "metadata": {
     "tags": []
    },
@@ -1539,7 +1415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "111",
+   "id": "99",
    "metadata": {
     "tags": []
    },
@@ -1551,7 +1427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "112",
+   "id": "100",
    "metadata": {
     "tags": []
    },
@@ -1565,7 +1441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "113",
+   "id": "101",
    "metadata": {
     "tags": []
    },
@@ -1579,7 +1455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "114",
+   "id": "102",
    "metadata": {
     "tags": []
    },
@@ -1593,7 +1469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "115",
+   "id": "103",
    "metadata": {
     "tags": []
    },
