[image_analysis,shenker/image_analysis] WIP pipeline. Cropping, segmentation, measurement, and mask measurement all work.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/240528 Pipeline.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/240528 Pipeline.ipynb
@@ -308,7 +308,7 @@
     "\n",
     "# def preprocess_func(img, k1=None, center=None, dark=None, flat=None):\n",
     "def preprocess_func(img):\n",
-    "    print(\"PREPROCESSING\")\n",
+    "    # print(\"PREPROCESSING\")\n",
     "    return img[600 : img.shape[0] - 600, 1500 : img.shape[1] - 1500]"
    ]
   },
@@ -351,7 +351,7 @@
     "\n",
     "for msg in readers.send_nd2(\n",
     "    nd2_filename,\n",
-    "    slices=dict(t=[0], v=[8]),\n",
+    "    slices=dict(t=range(200, 202), v=[8]),\n",
     "    delayed=delayed_,\n",
     "):\n",
     "    p.handle_message(msg)"
@@ -364,7 +364,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p.processed_frames[(8, \"RFP-EM\", 0)].shape"
+    "display_image(p.crops[(8, \"RFP-EM\", 200)][2], scale=True)"
    ]
   },
   {
@@ -374,7 +374,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p.rois[(8, 0)]"
+    "x = p.crops[(8, \"RFP-EM\", 200)][2]\n",
+    "y = watershed.segment(x)"
    ]
   },
   {
@@ -384,7 +385,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p.crops[(8, \"RFP-EM\", 0)][1]"
+    "display_image(skimage.color.label2rgb(y))"
    ]
   },
   {
@@ -394,7 +395,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "imgs = p.rois.delayed[(8, 0)].args"
+    "x = p.segmentation_masks[(8, 200)][2]"
    ]
   },
   {
@@ -404,7 +405,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_c = image.power_law_composite(*imgs)"
+    "display_image(skimage.color.label2rgb(x))"
    ]
   },
   {
@@ -414,13 +415,169 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display_image(img_c, scale=True, downsample=4)"
+    "p.measurements[(8, \"RFP-EM\", 200)][2]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.crops.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(p._queue._items)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q = p._queue._items"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for k, v in p._queue._items.items():\n",
+    "    print(\"k\", k)\n",
+    "    print(v.func)\n",
+    "    print(v.is_ready())\n",
+    "    print()\n",
+    "    print([x.__class__ for x in v.dependencies])\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q[139884345499696].args"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q[139884345499696].dependencies[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.processed_frames[(8, \"RFP-EM\", 0)].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.processed_frames.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.processed_frames[(8, \"CFP-EM\", 4)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.shifts[(8, 1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.rois[(8, 0)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.crops[(8, \"RFP-EM\", 0)][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imgs = p.rois.delayed[(8, 0)].args"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_c = image.power_law_composite(*imgs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(img_c, scale=True, downsample=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40",
+   "id": "55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +712,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41",
+   "id": "56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +767,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44",
+   "id": "59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45",
+   "id": "60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46",
+   "id": "61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48",
+   "id": "63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +816,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49",
+   "id": "64",
    "metadata": {},
    "source": [
     "# Analysis"
@@ -668,7 +825,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50",
+   "id": "65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51",
+   "id": "66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52",
+   "id": "67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,7 +876,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53",
+   "id": "68",
    "metadata": {},
    "source": [
     "# Manual FISH trench crops"
@@ -728,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54",
+   "id": "69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +895,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55",
+   "id": "70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56",
+   "id": "71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57",
+   "id": "72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,7 +959,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58",
+   "id": "73",
    "metadata": {
     "tags": []
    },
@@ -817,7 +974,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
+   "id": "74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,7 +984,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60",
+   "id": "75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61",
+   "id": "76",
    "metadata": {
     "tags": []
    },
@@ -873,7 +1030,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62",
+   "id": "77",
    "metadata": {
     "tags": []
    },
@@ -885,7 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63",
+   "id": "78",
    "metadata": {
     "tags": []
    },
@@ -897,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64",
+   "id": "79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -907,7 +1064,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65",
+   "id": "80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -920,7 +1077,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66",
+   "id": "81",
    "metadata": {},
    "source": [
     "# Segmentation"
@@ -929,7 +1086,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67",
+   "id": "82",
    "metadata": {
     "tags": []
    },
@@ -942,7 +1099,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68",
+   "id": "83",
    "metadata": {
     "tags": []
    },
@@ -967,7 +1124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69",
+   "id": "84",
    "metadata": {
     "tags": []
    },
@@ -982,7 +1139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70",
+   "id": "85",
    "metadata": {
     "tags": []
    },
@@ -994,7 +1151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71",
+   "id": "86",
    "metadata": {
     "tags": []
    },
@@ -1006,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72",
+   "id": "87",
    "metadata": {
     "tags": []
    },
@@ -1018,7 +1175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73",
+   "id": "88",
    "metadata": {
     "tags": []
    },
@@ -1039,7 +1196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74",
+   "id": "89",
    "metadata": {
     "tags": []
    },
@@ -1051,7 +1208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75",
+   "id": "90",
    "metadata": {
     "tags": []
    },
@@ -1063,7 +1220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76",
+   "id": "91",
    "metadata": {
     "tags": []
    },
@@ -1075,7 +1232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77",
+   "id": "92",
    "metadata": {
     "tags": []
    },
@@ -1089,7 +1246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78",
+   "id": "93",
    "metadata": {
     "tags": []
    },
@@ -1101,7 +1258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79",
+   "id": "94",
    "metadata": {
     "tags": []
    },
@@ -1113,7 +1270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80",
+   "id": "95",
    "metadata": {
     "tags": []
    },
@@ -1125,7 +1282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81",
+   "id": "96",
    "metadata": {
     "tags": []
    },
@@ -1138,7 +1295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82",
+   "id": "97",
    "metadata": {
     "tags": []
    },
@@ -1150,7 +1307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83",
+   "id": "98",
    "metadata": {
     "tags": []
    },
@@ -1162,7 +1319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84",
+   "id": "99",
    "metadata": {
     "tags": []
    },
@@ -1174,7 +1331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85",
+   "id": "100",
    "metadata": {
     "tags": []
    },
@@ -1186,7 +1343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86",
+   "id": "101",
    "metadata": {
     "tags": []
    },
@@ -1198,7 +1355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87",
+   "id": "102",
    "metadata": {
     "tags": []
    },
@@ -1210,7 +1367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88",
+   "id": "103",
    "metadata": {
     "tags": []
    },
@@ -1230,7 +1387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89",
+   "id": "104",
    "metadata": {
     "tags": []
    },
@@ -1251,7 +1408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90",
+   "id": "105",
    "metadata": {
     "tags": []
    },
@@ -1263,7 +1420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91",
+   "id": "106",
    "metadata": {
     "tags": []
    },
@@ -1285,7 +1442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92",
+   "id": "107",
    "metadata": {
     "tags": []
    },
@@ -1297,7 +1454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93",
+   "id": "108",
    "metadata": {
     "tags": []
    },
@@ -1323,7 +1480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94",
+   "id": "109",
    "metadata": {
     "tags": []
    },
@@ -1335,7 +1492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95",
+   "id": "110",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1345,7 +1502,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96",
+   "id": "111",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1363,7 +1520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97",
+   "id": "112",
    "metadata": {
     "tags": []
    },
@@ -1387,7 +1544,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98",
+   "id": "113",
    "metadata": {
     "tags": []
    },
@@ -1410,7 +1567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99",
+   "id": "114",
    "metadata": {
     "tags": []
    },
@@ -1425,7 +1582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "100",
+   "id": "115",
    "metadata": {
     "tags": []
    },
@@ -1437,7 +1594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "101",
+   "id": "116",
    "metadata": {
     "tags": []
    },
@@ -1451,7 +1608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "102",
+   "id": "117",
    "metadata": {
     "tags": []
    },
@@ -1465,7 +1622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "103",
+   "id": "118",
    "metadata": {
     "tags": []
    },
@@ -1479,7 +1636,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "104",
+   "id": "119",
    "metadata": {
     "tags": []
    },
