--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/240529 Pipeline.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/240529 Pipeline.ipynb
@@ -143,7 +143,7 @@
     ")\n",
     "assert nd2_filename.files\n",
     "# nd2_filename = \"/home/jqs1/scratch/jqs1/microscopy/231101/231101_FP_calibration.nd2\"\n",
-    "fish_filename = Path(nd2_filename).parent / \"FISH/real_run\""
+    "fish_filename = nd2_filename[0].parent / \"FISH/real_run\""
    ]
   },
   {
@@ -330,6 +330,8 @@
     "    # \"measure_channels\": = [\"RFP-PENTA\", \"YFP-DUAL\"],\n",
     "    \"crop_channels\": [\"Phase-Fluor\", \"RFP-EM\", \"GFP-EM\", \"YFP-EM\", \"CFP-EM\"],\n",
     "    \"measure_channels\": [\"RFP-EM\", \"GFP-EM\", \"YFP-EM\", \"CFP-EM\"],\n",
+    "    # \"fish_crop_channels\": [\"BF\", GFP-EM\", \"Cy5\", \"Cy7\"],\n",
+    "    \"fish_measure_channels\": [\"GFP\", \"Cy5\", \"Cy7\"],\n",
     "    # \"fish_probes\": hhh,\n",
     "    \"roi_detection_kwargs\": {\"width_to_pitch_ratio\": 1.4 / 3.5},\n",
     "    \"preprocess_func\": preprocess_func,\n",
@@ -354,7 +356,7 @@
     "    slices=dict(t=range(200, 202), v=[8]),\n",
     "    delayed=delayed_,\n",
     "):\n",
-    "    p.handle_message(msg)"
+    "    p.handle_message({**msg, \"image_type\": \"science\"})"
    ]
   },
   {
@@ -364,13 +366,79 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display_image(p.crops[(8, \"RFP-EM\", 200)][2], scale=True)"
+    "%%time\n",
+    "for msg in readers.send_eaton_fish(\n",
+    "    fish_filename,\n",
+    "    slices=dict(t=None, v=[8]),\n",
+    "    delayed=delayed_,\n",
+    "):\n",
+    "    p.handle_message({**msg, \"image_type\": \"fish_barcode\"})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.fish_crops.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.fish_measurements[(8, 1)][2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.dependencies[0]  # .is_ready()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(p.fish_crops[(8, \"Cy5\", 1)][2], scale=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(p._queue._items)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(p.crops[(8, \"RFP-EM\", 200)][2], scale=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,17 +489,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
-    "p.crops.keys()"
+    "p.fish_crops.keys()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40",
+   "id": "46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41",
+   "id": "47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44",
+   "id": "50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45",
+   "id": "51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46",
+   "id": "52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48",
+   "id": "54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49",
+   "id": "55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50",
+   "id": "56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51",
+   "id": "57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52",
+   "id": "58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53",
+   "id": "59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54",
+   "id": "60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55",
+   "id": "61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,7 +780,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56",
+   "id": "62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +794,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57",
+   "id": "63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58",
+   "id": "64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
+   "id": "65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60",
+   "id": "66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,7 +855,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61",
+   "id": "67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -797,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62",
+   "id": "68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63",
+   "id": "69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,7 +884,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64",
+   "id": "70",
    "metadata": {},
    "source": [
     "# Analysis"
@@ -825,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65",
+   "id": "71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66",
+   "id": "72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67",
+   "id": "73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,7 +944,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68",
+   "id": "74",
    "metadata": {},
    "source": [
     "# Manual FISH trench crops"
@@ -885,50 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img = nd2.get_frame_2D(v=8, c=0, t=180)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "k1 = 8.947368421052635e-10\n",
-    "img_t = image.correct_radial_distortion(img, k1=k1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "71",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "# diag = util.tree()\n",
-    "diag = None\n",
-    "trenches, info = trench_detection.find_trenches(\n",
-    "    img_t,\n",
-    "    # angle=np.deg2rad(0.001),\n",
-    "    join_info=False,\n",
-    "    width=12,\n",
-    "    # width_to_line_width_ratio=2,\n",
-    "    # width_to_pitch_ratio=None,\n",
-    "    # peak_func=trench_detection.peaks.find_peaks,\n",
-    "    diagnostics=diag,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "72",
+   "id": "75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -959,32 +984,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def calibrate_image(img, k1=0):\n",
-    "    img = skimage.img_as_float32(img)\n",
-    "    img = image.correct_radial_distortion(img, k1=k1)\n",
-    "    return img"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "74",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "?readers.send_eaton_fish"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "75",
+   "id": "76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1018,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76",
+   "id": "77",
    "metadata": {
     "tags": []
    },
@@ -1030,7 +1030,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77",
+   "id": "78",
    "metadata": {
     "tags": []
    },
@@ -1042,7 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78",
+   "id": "79",
    "metadata": {
     "tags": []
    },
@@ -1054,25 +1054,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fish_stacks0[10].info"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "80",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for msg in new.readers.send_nd2(\n",
-    "    filename,\n",
-    "    slices=dict(v=slice(1), t=slice(1)),\n",
-    "):\n",
-    "    handle_message(pipeline, msg)"
+    "fish_stacks0[10].info"
    ]
   },
   {
